# gsb-build-system

./: .gitignore  ANNOUNCE.2_30  ANNOUNCE.2_32  ANNOUNCE.3_0  AUTHORS  BRANCHES  BUILDING  BUILDING.TXT  CHANGES_AND_HINTS.TXT  COPYING.slackware  COPYRIGHT.TXT  CREDITS  CURRENT.WARNING  ChangeLog  ChangeLog.binary  ChangeLog.binary.slamd64  ChangeLog.slackware  ChangeLog.slackware64  ChangeLog.slamd64  ChangeLog.svn  ChangeLog_old  ChangeLog_proposed  FAQ.TXT  GNOME  GPG-KEY  GSB_226_UPGRADE.TXT  HACKING  HACKING.TXT  INSTALL.TXT  MIRRORS.TXT  NOTES.fidesratio  README  README.TXT  README.binary  README.svn  README_REPLACED_PACKAGES.TXT  README_SOURCE.TXT  REMOVED_PACKAGES.TXT  REPLACED_PACKAGES.TXT  SLACKCURRENT_CONFLICTS  (+14 more)
extra/: .buildlist  README.TXT  extra.SlackBuild
extra/MPlayer/: MPlayer.SlackBuild  MPlayer.info  slack-required
extra/balsa/: balsa.SlackBuild  balsa.info  doinst.sh  slack-required
extra/deluge/: deluge.SlackBuild  deluge.info  slack-required
extra/dvdrip/: doinst.sh  dvdrip.SlackBuild  dvdrip.desktop  dvdrip.info  slack-required
extra/easytag/: easytag.SlackBuild  easytag.info  slack-required
extra/gnome-perl/: gnome-perl.SlackBuild  gnome-perl.info  slack-conflicts  slack-desc
extra/gnome-tweak-tool/: gnome-tweak-tool.SlackBuild  gnome-tweak-tool.info  slack-desc
extra/gst-plugins-bad/: gst-plugins-bad.SlackBuild  gst-plugins-bad.info
extra/gst-plugins-ugly/: gst-plugins-ugly.SlackBuild  gst-plugins-ugly.info  slack-desc
extra/libesmtp/: doinst.sh  libesmtp.SlackBuild  libesmtp.info
extra/libnotify-solibs/: README  make-libnotify-solibs.sh
extra/mozilla-firefox/: doinst.sh  firefox.sh  slack-required
extra/msttcorefonts/: EULA.TXT  README.TXT  doinst.sh  msttcorefonts.SlackBuild  msttcorefonts.info  slack-desc
extra/pidgin/: doinst.sh  pidgin.SlackBuild  pidgin.info  slack-desc
extra/pyalsaaudio/: pyalsaaudio.SlackBuild  pyalsaaudio.info  slack-desc
extra/sylpheed/: slack-required  sylpheed.SlackBuild  sylpheed.info
extra/transcode/: transcode.SlackBuild  transcode.info
extra/volti/: slack-desc  volti.SlackBuild  volti.info
lib/GSB/: Themes.pm
lib/gsb/: dirty-installer.sh  doinst.sh  generic.SlackBuild  gsb.section.SlackBuild  gsb.section.SlackBuild-1.3  gsb.section.SlackBuild.old  gsb.sections.SlackBuild  package.SlackBuild  section.SlackBuild  slack-conflicts  slack-required
misc/frg-tagfiles/: README
notes/: CURRENT.WARNING  TODO  broken  caveats  dependancies.txt  gnome-2.20  gnome-2.20.old  mini-projects  mutagenix_dependancies.txt  new_packages  notes.3.0  notes.stevek  packages_to_rebuild  perl  replaced_packages  replaced_packages_gsb  replaced_packages_gsb-2.20  replaced_packages_gsb-2.22  replaced_packages_gsb-2.24  scrollkeeper  users_and_groups
pasture/: .buildlist  README.TXT
pasture/gdesklets/: gdesklets.SlackBuild  gdesklets.info  slack-conflict
pasture/gnome-applets/: gnome-applets.info  slack-required
pasture/gnome-mime-data/: gnome-mime-data.SlackBuild  gnome-mime-data.info  slack-desc
pasture/gnome-panel/: gnome-panel.SlackBuild  slack-required
pasture/gnome-vfs/: gnome-vfs.SlackBuild  slack-desc  slack-required
pasture/gnomebaker/: gnomebaker.SlackBuild  gnomebaker.info  slack-required
pasture/gob2/: gob2.SlackBuild
pasture/grip/: grip.SlackBuild  grip.info  slack-required
pasture/gtkpod/: gtkpod.SlackBuild  slack-desc
pasture/gtkspell/: gtkspell.SlackBuild  slack-desc  slack-required
pasture/istanbul/: istanbul.SlackBuild  istanbul.info  slack-required
pasture/libbonobo/: libbonobo.SlackBuild  libbonobo.info
pasture/libbonoboui/: slack-desc
pasture/libgnome/: libgnome.SlackBuild  slack-desc  slack-required
pasture/libgnomecanvas/: libgnomecanvas.SlackBuild  libgnomecanvas.info  slack-required
pasture/libgnomeui/: libgnomeui.SlackBuild  libgnomeui.info  slack-required
pasture/metacity/: metacity.info  slack-required
pasture/pstoedit/: pstoedit.SlackBuild  pstoedit.info  slack-desc
scripts/: doinst.sh  generic-with-schemas.SlackBuild  generic.SlackBuild  slack-desc
slax/: .buildlist  DEVELOPER_NOTES.TXT  HOWTO.TXT  LICENSE.GSB  LICENSE.SLAX  README.TXT  REQUIRED_MODULE.TXT  VERSIONS  gsb.SlaxBuild  modules.options
slax/gsb.base/: GSB.desktop  applications.menu  changelog.txt  defaults.list  devel.dirs  doc.dirs  gsb.base.SlaxBuild  issue  pkglist  (+4 more)
src/: .buildlist  .setlist  GSB.SlackBuild  GSB.options  README  README.TXT  TODO  buildlist.txt  gsb.SlackBuild  gsb.options  gsb.options.sample
src/libraries/gtkunique/gtkunique/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  gtkunique-1.0.pc.in
src/libraries/gtkunique/gtkunique/docs/reference/: ChangeLog  Makefile.am  backend-xlibs.sgml  gtkunique-docs.sgml  gtkunique-sections.txt  gtkunique.types
src/libraries/gtkunique/gtkunique/docs/reference/tmpl/: gtkunique-unused.sgml  gtkunique.sgml  gtkuniqueapp.sgml  gtkuniqueversion.sgml
src/libraries/gtkunique/gtkunique/gtkunique/: Makefile.am  gtkunique.h  gtkuniqueapp.c  gtkuniqueapp.h  gtkuniqueappobject.c  gtkuniqueappobject.h  gtkuniqueinternals.h  gtkuniquemarshal.list  gtkuniqueversion.h.in
src/libraries/gtkunique/gtkunique/gtkunique/bacon/: Makefile.am  gtkuniqueapp-bacon.c  gtkuniqueapp-bacon.h  gtkuniquefactory-bacon.c  gtkuniquefactory-bacon.h
src/libraries/gtkunique/gtkunique/gtkunique/dbus/: Makefile.am  gtkuniqueapp-dbus.c  gtkuniqueapp-dbus.h  gtkuniqueapp-dbus.xml  gtkuniquefactory-dbus.c  gtkuniquefactory-dbus.h
src/libraries/gtkunique/gtkunique/gtkunique/xlibs/: Makefile.am  gtkuniqueapp-xlibs.c  gtkuniqueapp-xlibs.h  gtkuniqueutils-xlibs.h
src/libraries/gtkunique/gtkunique/po/: POTFILES.in
src/libraries/gtkunique/gtkunique/tests/: Makefile.am  test-subclass.c  test-unique.c
tagfiles/: README.TXT
testing/: .buildlist  README.TXT
web/: .htaccess  TODO  about.html  faqs.txt  index.html  index.php  make-thumbs.sh  net-install  news.html  news.txt  sitemap.xml  update_web.sh  versions.txt
web-dev/: .htaccess  README  TODO  index.php  news.txt  robots.txt  sitemap.xml  versions.txt
(+6017 files in other folders)
